add contact section

--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
               <a
                 href="https://www.facebook.com/share/1DQHrNQGR8/"
                 class="social-icon"
+                title="facebook"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -266,6 +267,7 @@
               <a
                 href="https://www.instagram.com/hakkai_0w0?igsh=MTh6bjNybXJ0dmszOQ=="
                 class="social-icon"
+                title="instagram"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -284,7 +286,11 @@
                   <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
                 </svg>
               </a>
-              <a href="https://github.com/PyaePhyoMaung7" class="social-icon">
+              <a
+                href="https://github.com/PyaePhyoMaung7"
+                class="social-icon"
+                title="github"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -303,6 +309,7 @@
               <a
                 href="https://www.linkedin.com/in/pyae-phyo-maung-a534672b2/"
                 class="social-icon"
+                title="linkedin"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -321,7 +328,11 @@
                   <circle cx="4" cy="4" r="2"></circle>
                 </svg>
               </a>
-              <a href="mailto:pyaephyomg1004@gmail.com" class="social-icon">
+              <a
+                href="mailto:pyaephyomg1004@gmail.com"
+                class="social-icon"
+                title="gmail"
+              >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   viewBox="0 0 24 24"
@@ -416,7 +427,7 @@
                   ></div>
                   <div class="ml-6 -translate-y-1">
                     <p class="text-gray-600 text-sm" data-i18n="feDate"></p>
-                    <h3 data-i18n="feDate"></h3>
+                    <h3 data-i18n="feDescription"></h3>
                   </div>
                 </div>
                 <div id="timeline-item-3" class="mb-6 relative opacity-0">
@@ -466,7 +477,6 @@
                   <span class="pl-10"> Vue </span>
                 </div>
               </div>
-
               <div class="marquee-item item2">
                 <div class="flex items-center">
                   <svg
@@ -514,7 +524,6 @@
                       />
                     </g>
                   </svg>
-
                   <span class="pl-10">Laravel</span>
                 </div>
               </div>
@@ -735,7 +744,7 @@
                         Poddy
                       </h3>
                       <a
-                        href="https://satt.jp/product/kenja-cloud/"
+                        href="#"
                         class="px-1 py-2 bg-highlight text-white rounded-full text-xs scale-90 hover:scale-100"
                         title="Visit to Poddy official website"
                         target="_blank"
@@ -783,7 +792,7 @@
                         La Payy
                       </h3>
                       <a
-                        href="https://satt.jp/product/kenja-cloud/"
+                        href="#"
                         class="px-1 py-2 bg-highlight text-white rounded-full text-xs scale-90 hover:scale-100"
                         title="Visit to La Payy official website"
                         target="_blank"
@@ -814,8 +823,144 @@
             class="mb-8 font-semibold text-2xl text-center"
             data-i18n="contactTitle"
           ></h2>
+          <p class="text-center mb-8" data-i18n="contactText1"></p>
+          <p class="text-center mb-8" data-i18n="contactText2"></p>
+          <div class="flex flex-wrap justify-center items-center gap-2 mb-8">
+            <a
+              href="https://www.facebook.com/share/1DQHrNQGR8/"
+              title="facebook"
+            >
+              <div
+                class="flex items-center border rounded-full py-1 pl-1 pr-2 border-highlight hover:scale-105"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="#8b40c6"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="feather feather-facebook scale-90"
+                >
+                  <path
+                    d="M18 2h-3a5 5 0 0 0-5 5v3H7v4h3v8h4v-8h3l1-4h-4V7a1 1 0 0 1 1-1h3z"
+                  ></path>
+                </svg>
+                <span class="ml-5 text-sm">facebook</span>
+              </div>
+            </a>
+
+            <a
+              href="https://www.instagram.com/hakkai_0w0?igsh=MTh6bjNybXJ0dmszOQ=="
+              title="instagram"
+            >
+              <div
+                class="flex items-center border rounded-full py-1 px-2 border-highlight hover:scale-105"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  viewBox="0 0 24 24"
+                  fill="none"
+                  stroke="#8b40c6"
+                  stroke-width="2"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  class="feather feather-instagram scale-90"
+                >
+                  <rect x="2" y="2" width="20" height="20" rx="5" ry="5"></rect>
+                  <path
+                    d="M16 11.37A4 4 0 1 1 12.63 8 4 4 0 0 1 16 11.37z"
+                  ></path>
+                  <line x1="17.5" y1="6.5" x2="17.51" y2="6.5"></line>
+                </svg>
+                <span class="ml-7 text-sm">instagram</span>
+              </div>
+            </a>
+            <a
+              href="https://github.com/PyaePhyoMaung7"
+              title="github"
+            >
+            <div
+                class="flex items-center border rounded-full py-1 px-2 border-highlight hover:scale-105"
+              >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#8b40c6"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-github scale-90"
+              >
+                <path
+                  d="M9 19c-5 1.5 -5 -2.5 -7 -3m14 6v-3.87a3.366 3.366 0 0 0 -0.94 -2.61c3.14 -0.351 6.44 -1.54 6.44 -7a5.438 5.438 0 0 0 -1.5 -3.751 5.074 5.074 0 0 0 -0.09 -3.769s-1.179 -0.35 -3.91 1.48a13.401 13.401 0 0 0 -7 0c-2.73 -1.83 -3.91 -1.48 -3.91 -1.48a5.074 5.074 0 0 0 -0.09 3.769 5.438 5.438 0 0 0 -1.5 3.78c0 5.42 3.3 6.61 6.44 7a3.366 3.366 0 0 0 -0.94 2.58v3.871"
+                />
+              </svg>
+              <span class="ml-6 text-sm">github</span>
+            </div>
+            <a
+              href="https://www.linkedin.com/in/pyae-phyo-maung-a534672b2/"
+              title="linkedin"
+            >
+            <div
+                class="flex items-center border rounded-full py-1 px-2 border-highlight hover:scale-105"
+              >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#8b40c6"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-linkedin scale-90"
+              >
+                <path
+                  d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-2-2 2 2 0 0 0-2 2v7h-4v-7a6 6 0 0 1 6-6z"
+                ></path>
+                <rect x="2" y="9" width="4" height="12"></rect>
+                <circle cx="4" cy="4" r="2"></circle>
+              </svg>
+              <span class="ml-6 text-sm">linkedin</span>
+            </div>
+            </a>
+            <a
+              href="mailto:pyaephyomg1004@gmail.com"
+              title="gmail"
+            >
+            <div
+                class="flex items-center border rounded-full py-1 px-2 border-highlight hover:scale-105"
+              >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="none"
+                stroke="#8b40c6"
+                stroke-width="2"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                class="feather feather-mail scale-90"
+              >
+                <path
+                  d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
+                ></path>
+                <polyline points="22,6 12,13 2,6"></polyline>
+              </svg>
+              <span class="ml-6 text-sm">mail</span>
+            </div>
+            </a>
+          </div>
+          <p class="text-center mb-8" data-i18n="contactText3"></p>
         </section>
       </main>
+      <!-- footer -->
+      <footer>
+        <div class="text-center py-2 border-t border-highlight text-sm">
+          &copy; Pyae Phyo Maung. All rights reserved.
+        </div>
+      </footer>
     </div>
     <!-- js -->
     <script type="module" src="/src/ts/main.ts"></script>
