--- a/index.html
+++ b/index.html
@@ -377,63 +377,65 @@
                 class="mb-8 font-semibold text-2xl"
                 data-i18n="aboutTitle"
               ></h2>
-              <div>
-                <ul>
-                  <li>
-                    <div class="overflow-hidden mb-3">
-                      <p
-                        class="about-text translate-y-[50px]"
-                        data-i18n="aboutText1"
-                      ></p>
+              <div id="about-intro">
+                <div>
+                  <ul>
+                    <li>
+                      <div class="overflow-hidden mb-3">
+                        <p
+                          class="about-text translate-y-[50px]"
+                          data-i18n="aboutText1"
+                        ></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="overflow-hidden mb-3">
+                        <p
+                          class="about-text translate-y-[50px]"
+                          data-i18n="aboutText2"
+                        ></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="overflow-hidden mb-3">
+                        <p
+                          class="about-text translate-y-[70px]"
+                          data-i18n="aboutText3"
+                        ></p>
+                      </div>
+                    </li>
+                    <li>
+                      <div class="overflow-hidden mb-3">
+                        <p
+                          class="about-text translate-y-[50px]"
+                          data-i18n="aboutText4"
+                        ></p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+                <div class="overflow-hidden">
+                  <div class="about-text translate-y-[50px] flex">
+                    <div class="mr-5">
+                      <span class="text-highlight text-[40px] relative"
+                        ><span class="count inline-block opacity-0">1</span
+                        ><span
+                          class="plus opacity-0 absolute top-0 right-[-15px] text-highlight text-xl font-bold"
+                          >+</span
+                        ></span
+                      >
+                      <span class="font-semibold text-xl">Experience</span>
                     </div>
-                  </li>
-                  <li>
-                    <div class="overflow-hidden mb-3">
-                      <p
-                        class="about-text translate-y-[50px]"
-                        data-i18n="aboutText2"
-                      ></p>
+                    <div>
+                      <span class="text-highlight text-[40px] relative"
+                        ><span class="count inline-block opacity-0">3</span
+                        ><span
+                          class="plus opacity-0 absolute top-0 right-[-15px] text-highlight text-xl font-bold"
+                          >+</span
+                        ></span
+                      >
+                      <span class="font-semibold text-xl">Projects</span>
                     </div>
-                  </li>
-                  <li>
-                    <div class="overflow-hidden mb-3">
-                      <p
-                        class="about-text translate-y-[50px]"
-                        data-i18n="aboutText3"
-                      ></p>
-                    </div>
-                  </li>
-                  <li>
-                    <div class="overflow-hidden mb-3">
-                      <p
-                        class="about-text translate-y-[50px]"
-                        data-i18n="aboutText4"
-                      ></p>
-                    </div>
-                  </li>
-                </ul>
-              </div>
-              <div class="overflow-hidden">
-                <div class="about-text translate-y-[50px] flex">
-                  <div class="mr-5">
-                    <span class="text-highlight text-[40px] relative"
-                      ><span class="count inline-block opacity-0">1</span
-                      ><span
-                        class="plus opacity-0 absolute top-0 right-[-15px] text-highlight text-xl font-bold"
-                        >+</span
-                      ></span
-                    >
-                    <span class="font-semibold text-xl">Experience</span>
-                  </div>
-                  <div>
-                    <span class="text-highlight text-[40px] relative"
-                      ><span class="count inline-block opacity-0">3</span
-                      ><span
-                        class="plus opacity-0 absolute top-0 right-[-15px] text-highlight text-xl font-bold"
-                        >+</span
-                      ></span
-                    >
-                    <span class="font-semibold text-xl">Projects</span>
                   </div>
                 </div>
               </div>
