add cursor trail

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <!-- navbar -->
       <nav
         class="flex justify-between items-center xs:border-b border-gray-300 dark:border-black bg-white dark:bg-main-dark dark:title-dark sticky top-0 px-5 xs:px-10 z-10"
-        style="height: 50px"
+        style="height: 49px"
       >
         <!-- screen width >= 590px -->
         <!-- navigation -->
@@ -158,7 +158,7 @@
       <!-- Menu -->
       <div
         id="menu"
-        class="xs:hidden z-1 fixed top-[-82px] bg-white dark:bg-main-dark dark:title-dark"
+        class="xs:hidden z-1 fixed top-[-50px] bg-white dark:bg-main-dark dark:title-dark"
       >
         <ul class="z-1 px-5 xs:px-10 pb-2">
           <li class="pb-2">
@@ -442,7 +442,7 @@
             </div>
             <!-- Timeline -->
             <div class="sm:max-w-[50%]">
-              <h2 class="mb-8 font-semibold text-xl" data-i18n="eduBg"></h2>
+              <h2 class="mb-8 font-semibold text-2xl" data-i18n="eduBg"></h2>
               <div id="timeline" class="relative ml-2">
                 <!-- Animated Line -->
                 <div
@@ -1007,10 +1007,36 @@
       </main>
       <!-- footer -->
       <footer>
-        <div class="text-center py-2 border-t border-highlight text-sm">
+        <div
+          class="text-center py-2 border-t border-gray-300 dark:border-black text-sm"
+        >
           &copy; Pyae Phyo Maung. All rights reserved.
         </div>
       </footer>
+    </div>
+    <!-- cursor trail  -->
+    <div>
+      <div class="cursor"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
+      <div class="cursor-circle"></div>
     </div>
     <!-- js -->
     <script type="module" src="/src/ts/main.ts"></script>
