update cv, hide cursor effect in mobile/tablet

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
             </div>
 
             <div class="mb-2">
-              <a href="/cv/Pyae_Phyo_Maung_Resume.docx" download>
+              <a id="cv-link" href="/cv/Pyae_Phyo_Maung_Resume.docx" download>
                 <button
                   class="cv-button opacity-0 scale-80 bg-highlight text-white px-6 py-2 cursor-pointer rounded-3xl"
                   data-i18n="cvDownload"
